# itec

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  ruff.toml
itec/: asgi.py  excel.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
itec/migrations/: asset_model.py  rest_of_models_together.py
